--- a/Project/res/layout/fragment_account.xml
+++ b/Project/res/layout/fragment_account.xml
@@ -19,13 +19,13 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/AccountHeadPic"
-                android:layout_marginLeft="10dip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="10dip"
                 android:src="@drawable/luyi"
-                app:border_width="2dp"
-            	app:border_color="@color/Background" />
+                app:border_color="@color/Background"
+                app:border_width="2dp" />
 
             <TextView
                 android:id="@+id/account_name"
@@ -37,12 +37,12 @@
                 android:text="笑醉三千"
                 android:textColor="#f5f5f5"
                 android:textSize="25sp" />
-            
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="15dip"
                 android:src="@drawable/white_right_arrow" />
         </RelativeLayout>
@@ -56,11 +56,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:paddingBottom="3dip"
+            android:paddingTop="3dip" >
 
             <LinearLayout
                 android:layout_width="0dip"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical"
@@ -77,26 +79,23 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dip"
+                    android:layout_marginTop="5dip"
                     android:text="￥0.00"
                     android:textColor="@color/AccountMoney"
                     android:textSize="18sp" />
             </LinearLayout>
 
-            <View
-                android:layout_width="1dip"
-                android:layout_height="match_parent"
-                android:background="@color/DividerColor" />
-
             <LinearLayout
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:orientation="horizontal" >
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingRight="10dip" >
 
                 <LinearLayout
                     android:layout_width="0dip"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical"
@@ -113,21 +112,17 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dip"
+                        android:layout_marginTop="5dip"
                         android:text="45"
                         android:textColor="@color/AccountMoney"
                         android:textSize="18sp" />
                 </LinearLayout>
 
-                <TextView
+                <ImageView
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@drawable/account_signin_bg"
-                    android:textColor="#ffffff"
-                    android:textSize="18sp"
-                    android:text="签到\n+5积分" />
+                    android:src="@drawable/account_signin_bg" />
             </LinearLayout>
         </LinearLayout>
 
